<resources>
    <string name="app_name">M241H Calculator</string>
    <string name="vector_a">Vector A</string>
    <string name="vector_b">Vector B</string>
    <string name="mod_of_two_vectors_in_r3">mod of two vectors in R^3</string>
    <string name="calculate">Calculate</string>
    <string name="clear">Clear</string>
    <string name="cross_product_name">Cross Product of Vectors in R^3</string>
    <string name="blank">"  "</string>
    <string name="i">i</string>
    <string name="j">j</string>
    <string name="k">k</string>
</resources>
